--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,14 @@
         "regex": "cpp",
         "set": "cpp",
         "future": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bit": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "cinttypes": "cpp"
     },
     "C_Cpp.default.compilerPath": "/opt/ohpc/pub/compiler/gcc/7.3.0/bin/g++"
 }
