--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,8 @@
         "span": "cpp",
         "shared_mutex": "cpp",
         "cfenv": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "target": "cpp"
     },
     "C_Cpp.default.compilerPath": "/opt/ohpc/pub/compiler/gcc/7.3.0/bin/g++"
 }
