--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,8 @@
         "shared_mutex": "cpp",
         "cfenv": "cpp",
         "__nullptr": "cpp",
-        "target": "cpp"
+        "target": "cpp",
+        "typeindex": "cpp"
     },
     "C_Cpp.default.compilerPath": "/opt/ohpc/pub/compiler/gcc/7.3.0/bin/g++"
 }
